--- a/P5/index.html
+++ b/P5/index.html
@@ -1,10 +1,16 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
+    <title>Semicirculos</title>
     <script src="./addons/p5.min.js"></script>
     <script src="./addons/p5.dom.min.js"></script>
     <script src="./sketch.js"></script>
-  </head>
-  <body>
-  </body>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
+	<link rel="stylesheet" href="./style.css">
+</head>
+<body>
+	<div id="header"><p id="titulo">Semicirculos</p></div>
+    <div id="canvas"></div>
+</body>
 </html>
