Creacion de divs y cambios en el estilo
Se crean divs para el dibujo y el slider, se cambia estilo de texto

--- a/P5/home.html
+++ b/P5/home.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 	<div id="header"><p id="titulo">Prueba</p></div>
-	<div><a href="./index.html">Semicirculos</a></div>
+	<div><a href="./index.html" id="subtitulo">Semicirculos</a></div>
 </body>
 </html>
