--- a/P5/index.html
+++ b/P5/index.html
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Semicirculos</title>
-    <script src="./addons/p5.min.js"></script>
-    <script src="./addons/p5.dom.min.js"></script>
-    <script src="./sketch.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
+<head>
+	<meta charset="utf-8">
+	<title>prueba</title>
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
 	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
-	<div id="header">
-		<p id="titulo">Semicirculos</p>
-		<br>
-		<a href="./home.html" id="subtitulo">Volver</a>
-	</div>
-    <div id="espacio">
-    	<div id="modifiers"><p>Radio del semicirculo</p></div>
-	</div>
+	<div id="header"><p id="titulo">Prueba</p></div>
+	<div><a href="./semicirculos.html" id="subtitulo">Semicirculos</a></div>
 </body>
 </html>
