--- a/P5/puntos/skel.html
+++ b/P5/puntos/skel.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Semicirculos</title>
+    <title>Puntos</title>
     <script src="../addons/p5.min.js"></script> <!-- Fijarse que quede bien el link -->
     <script src="../addons/p5.dom.min.js"></script> <!-- Fijarse que quede bien el link -->
     <script src="./skel.js"></script> <!-- Cambiar el nombre del archivo .js -->
