Se agrega boton de guardar
Se agrega un boton para guardar el dibujo

--- a/P5/puntos/skel.html
+++ b/P5/puntos/skel.html
@@ -16,7 +16,8 @@
 		<a href="./index.html" id="subtitulo">Volver</a>
 	</div>
     <div id="espacio">
-    	<div id="modifiers"><p>modifier 1</p></div>
+    	<div id="modifiers"><p>modifier 1</p>
+         <button onclick="saveCanvas('canvas.png')"> Guardar </button> </div>
 	</div>
 </body>
 </html>
