Se crea joy y lineas
Se crean los proyectos lineas y joy the division, cambios al skel y creacion de botones

--- a/P5/lineas/lineas.html
+++ b/P5/lineas/lineas.html
@@ -2,16 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>skel</title> <!-- Cambiar el titulo de la pagina -->
+    <title>Lineas</title> <!-- Cambiar el titulo de la pagina -->
     <script src="../addons/p5.min.js"></script> <!-- Fijarse que quede bien el link -->
     <script src="../addons/p5.dom.min.js"></script> <!-- Fijarse que quede bien el link -->
-    <script src="./skel.js"></script> <!-- Cambiar el nombre del archivo .js -->
+    <script src="./lineas.js"></script> <!-- Cambiar el nombre del archivo .js -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
 	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
 	<div id="header">
-		<p id="titulo">skel</p> <!-- Cambiar el titulo de la pagina -->
+		<p id="titulo">LIineas</p> <!-- Cambiar el titulo de la pagina -->
 		<br>
 		<a href="./index.html" id="subtitulo">Volver</a>
 	</div>
