--- a/P5/skel/skel.html
+++ b/P5/skel/skel.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>skel</title> <!-- Cambiar el titulo de la pagina -->
+    <title>sss</title> <!-- Cambiar el titulo de la pagina -->
     <script src="../addons/p5.min.js"></script> <!-- Fijarse que quede bien el link -->
     <script src="../addons/p5.dom.min.js"></script> <!-- Fijarse que quede bien el link -->
     <script src="./skel.js"></script> <!-- Cambiar el nombre del archivo .js -->
@@ -11,12 +11,15 @@
 </head>
 <body>
 	<div id="header">
-		<p id="titulo">skel</p> <!-- Cambiar el titulo de la pagina -->
+		<p id="titulo">sdsd</p> <!-- Cambiar el titulo de la pagina -->
 		<br>
 		<a href="./index.html" id="subtitulo">Volver</a>
 	</div>
+	<div id="container">
     <div id="espacio">
-    	<div id="modifiers"><p>modifier 1</p></div>
-	</div>
+    </div>
+	<div id="modifiers"><p>modifier 1</p></div>
+	
+</div>
 </body>
 </html>
