--- a/P5/fuego/skel.html
+++ b/P5/fuego/skel.html
@@ -18,7 +18,13 @@
 	<div id="container">
     <div id="espacio">
     </div>
-	<div id="modifiers"><p>modifier 1</p></div>
+	<div id="modifiers">
+	<div id="slider1"></div>
+	<div id="slider2"></div>
+	<div id="slider3"></div>
+
+
+	</div>
 	
 </div>
 </body>
