--- a/P5/fuego/skel.html
+++ b/P5/fuego/skel.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>sss</title> <!-- Cambiar el titulo de la pagina -->
-    <script src="../addons/p5.min.js"></script> <!-- Fijarse que quede bien el link -->
-    <script src="../addons/p5.dom.min.js"></script> <!-- Fijarse que quede bien el link -->
-    <script src="./skel.js"></script> <!-- Cambiar el nombre del archivo .js -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
+<head>
+	<meta charset="UTF-8">
+	<title>sss</title> <!-- Cambiar el titulo de la pagina -->
+	<script src="../addons/p5.min.js"></script> <!-- Fijarse que quede bien el link -->
+	<script src="../addons/p5.dom.min.js"></script> <!-- Fijarse que quede bien el link -->
+	<script src="./skel.js"></script> <!-- Cambiar el nombre del archivo .js -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
 	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -16,16 +16,16 @@
 		<a href="./index.html" id="subtitulo">Volver</a>
 	</div>
 	<div id="container">
-    <div id="espacio">
-    </div>
-	<div id="modifiers">
-	<div id="slider1"></div>
-	<div id="slider2"></div>
-	<div id="slider3"></div>
+		<div id="espacio">
+		</div>
+		<div id="modifiers">
+			<div id="slider1"><p>amplitud de onda</p></div>
+			<div id="slider3"><p>longitud de onda</p></div>
+			<div id="slider2"><p>intervalo de muestreo</p></div>
 
+
+		</div>
 
 	</div>
-	
-</div>
 </body>
 </html>
