--- a/P5/circle_packing/circle_packing.html
+++ b/P5/circle_packing/circle_packing.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>sss</title> <!-- Cambiar el titulo de la pagina -->
+	<title>circle_packing</title> <!-- Cambiar el titulo de la pagina -->
 	<script src="../addons/p5.min.js"></script> <!-- Fijarse que quede bien el link -->
 	<script src="../addons/p5.dom.min.js"></script> <!-- Fijarse que quede bien el link -->
-	<script src="./skel.js"></script> <!-- Cambiar el nombre del archivo .js -->
+	<script src="./circle_packing.js"></script> <!-- Cambiar el nombre del archivo .js -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
 	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
 	<div id="header">
-		<p id="titulo">sdsd</p> <!-- Cambiar el titulo de la pagina -->
+		<p id="titulo">circle_packing</p> <!-- Cambiar el titulo de la pagina -->
 		<br>
 		<a href="./index.html" id="subtitulo">Volver</a>
 	</div>
@@ -19,9 +19,9 @@
 		<div id="espacio">
 		</div>
 		<div id="modifiers">
-			<div id="slider1"><p>amplitud de onda</p></div>
-			<div id="slider3"><p>longitud de onda</p></div>
-			<div id="slider2"><p>intervalo</p></div>
+			<div id="slider1"><p>slider1</p></div>
+			<div id="slider3"><p>slider2</p></div>
+			<div id="slider2"><p>slider3</p></div>
 
 
 		</div>
